# hscurses-fish-ex

./: README  README.md  Setup.hs  hscurses-fish-ex.cabal  hscurses-fish-ex.hs
