name:                hscurses-fish-ex
version:             1.3.1
cabal-version:       >= 1.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2010 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           stable
homepage:            http://hub.darcs.net/dino/hscurses-fish-ex
synopsis:            hscurses swimming fish example
description:         Simple curses aquarium written to learn about 
                     the hscurses library.
category:            Console, Development, Education, Help,
                     User Interfaces
tested-with:         GHC>=6.12.1

source-repository    head
   type:             darcs
   location:         http://hub.darcs.net/dino/hscurses-fish-ex

executable           hscurses-fish-ex
   main-is:          hscurses-fish-ex.hs
   build-depends:    base >= 3 && < 5, hscurses, random, safe, unix
   ghc-options:      -Wall
